# zala

./: .gitignore  README.md  pyproject.toml
.github/workflows/: black.yml  release.yml
scripts/: format.sh
zala/: __init__.py  __main__.py  config.py  consts.py  exceptions.py  help_label.py  main_window.py  rubber_band.py  screenshot.py  screenshot_preview.py  take_region.py  utils.py  wayland_hacks.py
