[build-system]
build-backend = "hatchling.build"
requires = [
    "hatchling>=1.18",
    "hatch-vcs>=0.4",
]

[project]
name = "zala"
dynamic = ["version"]
description = "PyQt utility that takes screenshots."
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE" }
keywords = ["AJATT", "screenshot", "PyQt"]
authors = [
    { name = "Ajatt-Tools and contributors" },
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
# https://github.com/pypa/hatch/blob/master/docs/config/dependency.md
dependencies = [
    "beartype>=0.22.0",
    "PyQt6>=6.8.0",
    "fire>=0.7.0",
    "loguru>=0.7.3",
]

[project.urls]
Documentation = "https://github.com/Ajatt-Tools/zala#readme"
Issues = "https://github.com/Ajatt-Tools/zala/issues"
Source = "https://github.com/Ajatt-Tools/zala"

[project.scripts]
zala = "zala.__main__:main"

[tool.hatch.version]
source = "vcs"
path = "zala/__about__.py"

[tool.hatch.build.hooks.vcs]
version-file = "zala/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
    "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/zala tests}"

[tool.coverage.run]
source_pkgs = ["zala", "tests"]
branch = true
parallel = true
omit = [
    "zala/__about__.py",
]

[tool.coverage.paths]
zala = ["src/zala", "*/zala/src/zala"]
tests = ["tests", "*/zala/tests"]

[tool.coverage.report]
exclude_lines = [
    "no cov",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.black]
line-length = 120
target-version = ['py313']

[tool.isort]
profile = "black"

[tool.hatch.envs.hatch-test]
# https://hatch.pypa.io/latest/config/internal/testing/
# https://hatch.pypa.io/latest/tutorials/testing/overview/
dependencies = [
    "mypy>=1.0.0",
    "pytest",
    "pytest-asyncio",
    "beartype",
    "pytest-xdist",
]
parallel = true
randomize = true

[[tool.hatch.envs.hatch-test.matrix]]
# https://hatch.pypa.io/latest/tutorials/testing/overview/#testing-projects
python = ["3.13", ]

[tool.hatch.envs.hatch-static-analysis]
# https://hatch.pypa.io/latest/how-to/static-analysis/behavior/
dependencies = ["black", "flake8", "isort", "pyupgrade"]

[tool.hatch.envs.hatch-static-analysis.scripts]
format-check = [
    "black --check --diff {args:.}",
    "isort --check-only --diff {args:.}",
]
format-fix = [
    "bash scripts/format.sh", # run as: hatch fmt -f
]
lint-check = "flake8 --max-line-length 120 {args:.}"
lint-fix = "lint-check"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "session"
filterwarnings = [
    "ignore:There is no current event loop",
]
